--- a/backend/.env_example
+++ b/backend/.env_example
@@ -1,2 +1,6 @@
-FRONTEND_URL="https://3001-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
-BACKEND_URL="https://4567-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
+FRONTEND_URL="http://localhost:3000"
+BACKEND_URL="http://127.0.0.1:4567"
+
+# Gitpod Platform
+# FRONTEND_URL="https://3001-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
+# BACKEND_URL="https://4567-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
