add .env_example for gitpod

--- a/backend/.env_example
+++ b/backend/.env_example
@@ -1,6 +1,7 @@
-FRONTEND_URL="http://localhost:3000"
-BACKEND_URL="http://127.0.0.1:4567"
+# localhost
+# FRONTEND_URL="http://localhost:3000"
+# BACKEND_URL="http://127.0.0.1:4567"
 
-# Gitpod Platform
-# FRONTEND_URL="https://3001-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
-# BACKEND_URL="https://4567-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
+# gitpod platform
+FRONTEND_URL="https://3001-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
+BACKEND_URL="https://4567-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
