--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -8,7 +8,7 @@ tasks:
       unzip awscliv2.zip
       sudo ./aws/install
       cd $THEIA_WORKSPACE_ROOT
-      aws budgets describe-budgets --account-id $AWS_ACCOUNT_ID
+      aws sts get-caller-identity
 vscode:
   extensions:
     - 42Crunch.vscode-openapi
