--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -35,6 +35,9 @@ ENV FLASK_ENV=development
 # Expose the port specified in the environment variable PORT
 EXPOSE ${PORT}
 
+# Define a health check command
+HEALTHCHECK --interval=30s --timeout=10s CMD curl -f http://localhost:${PORT}/health || exit 1
+
 # Run the Flask application
 CMD [ "python3", "-m" , "flask", "run", "--host=0.0.0.0", "--port=4567"]
 # CMD ["venv/bin/python", "-m", "flask", "run", "--host=0.0.0.0", "--port=4567"]
