--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,11 @@ services:
     environment:
       # Set the FRONTEND_URL environment variable for the Flask backend service.
       # This variable includes the Gitpod workspace ID and cluster host in the URL.
-      FRONTEND_URL: "https://3000-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
+      FRONTEND_URL: "${FRONTEND_URL}"
       
       # Set the BACKEND_URL environment variable for the Flask backend service.
       # This variable also includes the Gitpod workspace ID and cluster host in the URL.
-      BACKEND_URL: "https://4567-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
+      BACKEND_URL: "${BACKEND_URL}"
       
     # Build the backend service using the Dockerfile located in the './backend' directory.
     build: ./backend
@@ -18,6 +18,7 @@ services:
       - "4567:4567"
       
     # Create a volume to link the './backend' directory with the '/backend' directory in the container.
+    # any updates in local ./backend dir will automaticall update the container backend dier
     volumes:
       - ./backend:/backend
 
@@ -25,7 +26,7 @@ services:
     environment:
       # Set the REACT_APP_BACKEND_URL environment variable for the React frontend service.
       # This variable includes the Gitpod workspace ID and cluster host in the URL.
-      REACT_APP_BACKEND_URL: "https://4567-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
+      REACT_APP_BACKEND_URL: "${BACKEND_URL}"
     
     # Build the frontend service using the Dockerfile located in the './frontend' directory.
     build: ./frontend
