--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.7", "3.8"]
 
     steps:
       - uses: actions/checkout@v3
@@ -25,11 +25,6 @@ jobs:
       - name: Install Dependencies
         run: |
           pip install -r requirements.txt
-        working-directory: backend
-
-      - name: Run Tests
-        run: |
-          python run_tests.py
         working-directory: backend
 
   dockerfile-lint:
