--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,8 @@ jobs:
       - uses: hadolint/hadolint-action@v1.6.0
         with:
           dockerfile: Dockerfile
+      working-directory: backend
+
   docker-hub:
     name: Build and Push to Docker Hub
     # Don't bother running this job unless the other three all pass
