--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,8 +35,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: hadolint/hadolint-action@v1.6.0
         with:
-          dockerfile: Dockerfile
-        working-directory: backend
+          dockerfile: backend/Dockerfile
 
   docker-hub:
     name: Build and Push to Docker Hub
