--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,14 +20,15 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
+        working-directory: ./backend
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
 
       - name: Install Dependencies
+        working-directory: ./backend
         run: |
           pip install -r requirements.txt
-        working-directory: backend
 
   docker-hub:
     name: Build and Push to Docker Hub
@@ -38,10 +39,12 @@ jobs:
       # Set up buildx for optimal Docker Builds, see:
       # https://github.com/docker/setup-buildx-action
       - name: Set up Docker Buildx
+        working-directory: ./backend
         uses: docker/setup-buildx-action@v2
       # Login to Docker Hub using GitHub secrets, see:
       # https://github.com/docker/login-action
       - name: Login to DockerHub
+        working-directory: ./backend
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -49,6 +52,7 @@ jobs:
 
       # Build and Push an Image to Docker Hub
       - name: Build and push
+        working-directory: ./backend
         env:
           # Define an Environment Variable with our Docker Hub Repo
           # Replace `username` with your Docker Hub username and `fragments
