--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,15 +20,14 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
-        working-directory: ./backend
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
 
       - name: Install Dependencies
-        working-directory: ./backend
         run: |
           pip install -r requirements.txt
+        working-directory: backend
 
   docker-hub:
     name: Build and Push to Docker Hub
@@ -39,7 +38,6 @@ jobs:
       # Set up buildx for optimal Docker Builds, see:
       # https://github.com/docker/setup-buildx-action
       - name: Set up Docker Buildx
-        working-directory: ./backend
         uses: docker/setup-buildx-action@v2
       # Login to Docker Hub using GitHub secrets, see:
       # https://github.com/docker/login-action
@@ -51,7 +49,6 @@ jobs:
 
       # Build and Push an Image to Docker Hub
       - name: Build and push
-        working-directory: ./backend
         env:
           # Define an Environment Variable with our Docker Hub Repo
           # Replace `username` with your Docker Hub username and `fragments
