--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./backend
+        working-directory: ./backend/
     strategy:
       matrix:
         python-version: ["3.7", "3.8"]
@@ -37,7 +37,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./backend
+        working-directory: ./backend/
     steps:
       # Set up buildx for optimal Docker Builds, see:
       # https://github.com/docker/setup-buildx-action
