add postgres-db-loacal & dynamo-db-local services

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,29 @@ services:
     # Create a volume to link the './frontend' directory with the '/frontend' directory in the container.
     volumes:
       - ./frontend:/frontend
+  
+  postgres-db-local:
+    image: postgres:13-alpine
+    restart: always
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=password
+    ports:
+      - '5432:5432'
+    volumes: 
+      - db:/var/lib/postgresql/data
+  dynamo-db-local:
+    # https://stackoverflow.com/questions/67533058/persist-local-dynamodb-data-in-volumes-lack-permission-unable-to-open-databa
+    # We needed to add user:root to get this working.
+    user: root
+    command: "-jar DynamoDBLocal.jar -sharedDb -dbPath ./data"
+    image: "amazon/dynamodb-local:latest"
+    container_name: dynamo-db-local
+    ports:
+      - "8000:8000"
+    volumes:
+      - "./docker/dynamodb:/home/dynamodblocal/data"
+    working_dir: /home/dynamodblocal
 
 # Define a custom Docker network named 'internal-network' with the bridge driver.
 # This network can be used for communication between containers.
@@ -45,3 +68,7 @@ networks:
   internal-network:
     driver: bridge
     name: crumble
+
+volumes:
+  db:
+    driver: local
