--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,7 +5,7 @@ FROM python:3.10-slim-buster as builder
 WORKDIR /backend
 
 # Copy only the requirements file to leverage Docker caching
-COPY requirements.txt requirements.txt
+COPY requirements.txt .
 
 # # Create a virtual environment and install dependencies
 # RUN python -m venv venv && \
@@ -25,6 +25,8 @@ COPY requirements.txt requirements.txt
 # # Copy the virtual environment and application code from the builder stage
 # COPY --from=builder /backend/venv /backend/venv
 
+
+# hadolint ignore=DL3042
 RUN pip3 install -r requirements.txt
 
 COPY . .
@@ -35,9 +37,5 @@ ENV FLASK_ENV=development
 # Expose the port specified in the environment variable PORT
 EXPOSE ${PORT}
 
-# Define a health check command
-HEALTHCHECK --interval=30s --timeout=10s CMD curl -f http://localhost:${PORT}/health || exit 1
-
 # Run the Flask application
-CMD [ "python3", "-m" , "flask", "run", "--host=0.0.0.0", "--port=4567"]
-# CMD ["venv/bin/python", "-m", "flask", "run", "--host=0.0.0.0", "--port=4567"]
+CMD ["python", "-m", "flask", "run", "--host=0.0.0.0", "--port=4567"]
